--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
   <footer  class="colored-section" id="footer">
     <div class="container-fluid">
-  <a href="https://instagram.com/k.t_editing?utm_medium=copy_link" target="_blank" rel="noopener noreferrer" class="footer-link">Instagram</a>
+  <a href="https://www.instagram.com/k.t_editing_and_designing/" target="_blank" rel="noopener noreferrer" class="footer-link">Instagram</a>
  
   <a href="mailto:k.t.editing2805@gmail.com" target="_blank" rel="noopener noreferrer" class="footer-link" > Mail</a>
     <p class="footer-writing">© Copyright 2021 K.T.Editing</p>
