--- a/index.html
+++ b/index.html
@@ -136,12 +136,8 @@
             <div class="carousel-item container-fluid">
               <img class="work-image" src="sadimage.jpg" alt="lady-profile">
               </div>
-              <div class="carousel-item container-fluid">
-                <video src="video1.mp4" width="400" height="300" controls loop muted></video>
-                </div>
-                <div class="carousel-item container-fluid">
-                  <video src="video2.mp4" width="400" height="300" controls loop muted></video>
-                  </div>
+              
+                
                   <div class="carousel-item container-fluid">
                    <img src="videoimage1.jpg" alt="">
                     </div>
@@ -176,10 +172,10 @@
 
   <!-- Achievement -->
 
-  <h3 class=" subsection-heading">ACHIVEMENTS</h3>
+  <h3 class=" subsection-heading">Work</h3>
 
-  <img src="certificate.jpg" alt="certificat image" class="achievement-image">
- 
+  <h6> Customize Mug, Customize Moblie Covers, Customize Tshirt and more available..... </h6>
+    <h5> Buy 1 and get 1 Mug Absolutely free.</h5>
 </div>
 </section>
 
