--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 
   <h3 class=" subsection-heading">Work</h3>
 
-  <h6> Customize Mug, Customize Moblie Covers, Customize Tshirt and more available..... </h6>
-    <h5> Buy 1 and get 1 Mug Absolutely free.</h5>
+  <h5>> Customize Mug, Customize Moblie Covers, Customize Tshirt and more available..... </h5>
+    <h3> Buy 1 and get 1 Mug Absolutely free.</h3>
 </div>
 </section>
 
