--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <!-- Work -->
 
-  <section  class="work-section" id="work" >
+  <section  class="colored-section" id="work" >
         <h2 class="section-heading"> My Art Work</h2>
 
 
