--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
   <h3 class=" subsection-heading">Work</h3>
 
-  <h5>> Customize Mug, Customize Moblie Covers, Customize Tshirt and more available..... </h5>
+  <h5> Customize Mug, Customize Moblie Covers, Customize Tshirt and more available..... </h5>
     <h3> Buy 1 and get 1 Mug Absolutely free.</h3>
 </div>
 </section>
