--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>K.T.Editing</title>
+  <title>K.T.Editing and Designing Groups </title>
   <!-- BOOTSTRAP SCRIPTS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -174,7 +174,7 @@
 
   <h3 class=" subsection-heading">Work</h3>
 
-  <h5> Customize Mug, Customize Moblie Covers, Customize Tshirt and more available..... </h5>
+  <h6> Customize Mug, Customize Moblie Covers, Customize Tshirt and more available..... </h6>
     <h3> Buy 1 and get 1 Mug Absolutely free.</h3>
 </div>
 </section>
