--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
      <div class="row">
        <div class="col-lg-6">
        
-      <h1 class="big-heading" >K.T.Editing</h1>
+      <h1 class="big-heading" >K.T.Editing and Designing Groups</h1>
       <h5 class = "small-heading"> 'Founder : Krish Thakkar.'</h5>
       
     </div>
